Mar 18, 2024
  updated to java 17
  increased maximum data series to GSE261nnn (from GSE240nnn)

Aug 22, 2023
  rows that are added to RNA_SEQ table have CURATION_STATUS field set to 'pending'

Aug 10, 2023
  code refactoring for ontology mapper

Aug 9, 2023
  fixed NullPointerException during ontology analysis

Aug 8, 2023
  when loading skip species not in RGD

Aug 4, 2023
  updated list of processed species

May 24, 2023
  simplified code; implemented code analysis for data loaded after specific cutoff date

May 23, 2023
  upgraded logging to log4j2

Jan 10, 2023
  updated build.gradle to be gradle 6.x + compatible