@@ -23,10 +23,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
     implementation 'commons-io:commons-io:2.10.0'
     implementation 'commons-net:commons-net:3.9.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.11'
+    implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
     implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
     implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
     implementation 'org.springframework:spring-jdbc:6.1.4'
