@@ -47,6 +47,12 @@
                 <TimeBasedTriggeringPolicy interval="1"/>
             </Policies>
         </RollingFile>
+        <RollingFile name="pubmed" append="true" fileName="logs/pubmed.log" filePattern="logs/pubmed.log.%d{yyyy-MM}">
+            <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
+            <Policies>
+                <TimeBasedTriggeringPolicy interval="1"/>
+            </Policies>
+        </RollingFile>
         <RollingFile name="log_rgd" append="true" fileName="logs/log_rgd.log" filePattern="logs/log_rgd.log.%d{yyyy-MM}">
             <PatternLayout pattern="[%d{yyyy-MM-dd HH:mm:ss}] - %m%n"/>
             <Policies>
@@ -86,6 +92,10 @@
         </Logger>
         <Logger name="log_rgd" level="debug" additivity="false">
             <AppenderRef ref="log_rgd"/>
+            <AppenderRef ref="Console" level="info"/>
+        </Logger>
+        <Logger name="pubmed" level="debug" additivity="false">
+            <AppenderRef ref="pubmed"/>
             <AppenderRef ref="Console" level="info"/>
         </Logger>
     </Loggers>
